--- a/style.css
+++ b/style.css
@@ -159,3 +159,48 @@ border:5px solid #ddd;
 margin:30px 0;
 display:block;
 }
+
+/* ---------------------- BEGIN MODDAL BOX */
+
+/* The Modal (background) */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	color: #ccccdd;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+	color: #ccccdd;
+	background-color: #333333;
+	margin: 15% auto; /* 15% from the top and centered */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+	color: #f0f;
+	float: right;
+	font-size: 40px;
+	font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+	color: green;
+	text-decoration: none;
+	cursor: pointer;
+  }
+  
+  /* ---------------------- END MODDAL BOX */
+  
